--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,9 @@ autogluon==1.2.0
 autogluon.tabular==1.2.0
 pillow==10.4.0  # 显式指定兼容版本
 mordred
+chemprop
 #git+https://github.com/mordred-descriptor/mordred.git
+
 
 
 
