--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,9 @@ autogluon.tabular==1.2.0
 pillow==10.4.0  # 显式指定兼容版本
 mordred
 chemprop
+torch
 #git+https://github.com/mordred-descriptor/mordred.git
+
 
 
 
