--- a/requirements.txt
+++ b/requirements.txt
@@ -7,9 +7,10 @@ autogluon==1.2.0
 autogluon.tabular==1.2.0
 pillow==10.4.0  # 显式指定兼容版本
 mordred
-chemprop
-torch
+chemprop==1.5.2
+torch==2.2.2+cpu
 #git+https://github.com/mordred-descriptor/mordred.git
+
 
 
 
